<resources>

    <string name="app_name">ChessTimer</string>
    <string name="title_activity_main">ChessTimer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="first_player">Player 1</string>
    <string name="second_player">Player 2</string>
    <string name="default_time">00:00:00.0</string>
    <string name="title_activity_end">EndActivity</string>
    <string name="end_game_msg">Game over!</string>
    <string name="stop_button">Stop</string>
    
    <!-- Preferences -->
    <string name="players_name">Players names</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="plDesсr">Input player name</string>
    <string name="timePref">Time settings</string>
    <string name="time">Time for game</string>
    <string name="time_descr">Input time for game in minute</string>
    <string name="category_timer_type">Timer type and interval</string>
    <string name="timer_type">Timer type</string>
    <string name="time_limit">Time limit</string>
    <string name="time_limit_descr">Input time limit in seconds</string>
    <string name="timer_type_descr">Select timer type</string>
    <string name="simple_timer">Simple timer</string>
    <string name="timer_with_delay">Timer with delay(Andante)</string>
    <string name="adagio_timer">Adagio</string>
    <string name="fisher_timer">Fisher timer</string>

</resources>