<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
	
	<PreferenceCategory
    	android:title = "@string/players_name">
    	<EditTextPreference 
        	android:title="@string/player1"
        	android:key="pl1" 
        	android:summary="@string/plDesсr"
        	android:defaultValue="@string/player1">
    	</EditTextPreference>
    
    	<EditTextPreference 
        	android:title="@string/player2"
        	android:key="pl2" 
        	android:summary="@string/plDesсr"
        	android:defaultValue="@string/player2">
    	</EditTextPreference>
	</PreferenceCategory>
    
	<PreferenceCategory
	    android:title="@string/timePref">
    	<EditTextPreference
    	    android:inputType="number"
        	android:title="@string/time"
        	android:key="timePref"
        	android:summary="@string/time_descr"
        	android:defaultValue="10">
    	</EditTextPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/category_timer_type">"
		<ListPreference
	    	android:title="@string/timer_type"
	    	android:summary="@string/timer_type_descr"
	    	android:key="listPrefTimerType"
	    	android:defaultValue="0"
	    	android:entries="@array/lisrArray"
	    	android:entryValues="@array/listValue"
		/>
		<EditTextPreference 
		    android:inputType="number"
		    android:title="@string/time_limit"
		    android:summary="@string/time_limit_descr"
		    android:key="limitTime"
		    android:defaultValue="5"
		/>
	</PreferenceCategory>
</PreferenceScreen>