<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.3" >

        <TextView
            android:id="@+id/firstPlName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/first_player"
            android:textSize="15pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/secondPlName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/second_player"
            android:textSize="15pt"
            android:textStyle="bold" />

    </TableRow>


    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.3" >






        <TextView
            android:id="@+id/tvFirstPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/default_time"
            android:textSize="8pt" />








        <TextView
            android:id="@+id/tvSecondPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/default_time"
            android:textSize="8pt" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/subTvFirstPl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/subTvSecondPl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.4" >





        <Button
            android:id="@+id/buttonFirstPlayer"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:text="@string/stop_button" />





        <Button
            android:id="@+id/buttonSecondPlayer"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:text="@string/stop_button" />

    </TableRow>

</TableLayout>